recursion.cons.last.Last.scala.error
Compilation error:
Last:16: error: Unmatched closing brace '}' ignored here
}
^